Initial Lab2 TVDB work.

--- a/MyTVCompanion/MyTVCompanion/MyTVCompanion.csproj
+++ b/MyTVCompanion/MyTVCompanion/MyTVCompanion.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="TvdbLib, Version=0.8.8.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\TvdbLib.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
