Add Lab2 TVDB connections.

--- a/MyTVCompanion/MyTVCompanion/MyTVCompanion.csproj
+++ b/MyTVCompanion/MyTVCompanion/MyTVCompanion.csproj
@@ -50,7 +50,7 @@
     </Reference>
     <Reference Include="TvdbLib, Version=0.8.8.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\TvdbLib.dll</HintPath>
+      <HintPath>References\TvdbLib.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -107,6 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
