--- a/WP8RHITBandwidth/WP8RHITBandwidth/WP8RHITBandwidth.csproj
+++ b/WP8RHITBandwidth/WP8RHITBandwidth/WP8RHITBandwidth.csproj
@@ -103,6 +103,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="BandwidthMeter.xaml.cs">
@@ -123,6 +126,10 @@
       <SubType>Designer</SubType>
     </DesignData>
     <Page Include="BandwidthMeter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
